--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ ul {
     padding: 0;
 }
 
-li {
+.section li {
     display: inline;
 }
 
@@ -129,11 +129,14 @@ footer {
     border-radius: 4px;
     width: 50%;
 
+    box-shadow: 3px 3px 0 #111111;
+
     pointer-events: auto;
 }
 
 .modal-header {
     background-color: #516DB3;
+    padding: 0 10px;
     margin-bottom: 10px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -144,8 +147,11 @@ footer {
     padding: 10px;
 }
 
+.modal-content li+li {
+    margin-top: 10px;
+}
+
 .close {
-    margin-right: 15px;
     color: #AAAAAA;
     float: right;
     font-weight: bold;
