--- a/css/index.css
+++ b/css/index.css
@@ -111,12 +111,13 @@ footer {
     height: 100%;
     width: 100%;
 
-    pointer-events: none;
-
     position: fixed;
     z-index: 1;
 
     opacity: 0;
+
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.75);
 
     transition: opacity 0.2s ease-out;
 }
@@ -130,8 +131,6 @@ footer {
     width: 50%;
 
     box-shadow: 3px 3px 0 #111111;
-
-    pointer-events: auto;
 }
 
 .modal-header {
