--- a/css/index.css
+++ b/css/index.css
@@ -121,6 +121,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.75);
 
     transition: opacity 0.2s ease-out;
+    -webkit-transition: opacity 0.2s ease-out;;
 }
 
 .modal-content {
