Improve assignment CSS, add lab 6 to readme

--- a/ENSE353/assignment/css/assignment.css
+++ b/ENSE353/assignment/css/assignment.css
@@ -9,6 +9,10 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
+h1 {
+    font-size: 3em;
+}
+
 body, div, form {
     display: flex;
     flex-direction: column;
