--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
     align-items: stretch;
     justify-content: center;
 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
 
     height: 100%;
