--- a/ENSE353/assignment/css/assignment.css
+++ b/ENSE353/assignment/css/assignment.css
@@ -59,7 +59,18 @@ form > input {
 }
 
 form > input[type=submit] {
+    padding: 6px 68px;
+    font-weight: bolder;
     margin-top: 10px;
+    transition: background-color 0.5s;
+    -webkit-transition: background-color 0.5s;
+
+    background-color: #D1E0ED;
+}
+
+form > input[type=submit]:hover {
+    background-color: #ACBBC8;
+    cursor: pointer;
 }
 
 
